--- a/2012-09-21-README.md
+++ b/2012-09-21-README.md
@@ -1,1 +1,3 @@
 Glisten's noobie experiment with document development using github and prose.io.
+
+Includes documents developing several related themes which can be stitched together later. 
